add custom scrollbars

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -71,3 +71,15 @@
         @apply border-border;
     }
 }
+
+@layer components {
+    .scrollbar::-webkit-scrollbar {
+        @apply w-[13px];
+    }
+    .scrollbar::-webkit-scrollbar-thumb {
+        @apply rounded-full border-4 border-solid border-transparent bg-foreground bg-clip-content;
+    }
+    .scrollbar::-webkit-scrollbar-track {
+        @apply bg-transparent;
+    }
+}
