--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -70,6 +70,9 @@
     * {
         @apply border-border selection:bg-foreground selection:text-background;
     }
+    a {
+        @apply focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring focus-visible:ring-offset-4 focus-visible:ring-offset-background;
+    }
 }
 
 @layer components {
